# Inventory-Management-System

./: .gitignore  README.txt
InventoryManagementSystem/: CMakeLists.txt  main.cpp
InventoryManagementSystem/dialogs/: IngredientDialog.h
InventoryManagementSystem/resources/: style.qss
InventoryManagementSystem/resources/icons/: README.txt
InventoryManagementSystem/ui/: CategoriesPage.cpp  CustomerViewPage.h  DashboardPage.cpp  DashboardPage.h  IconWidget.h  KDSPage.cpp  MainWindow.cpp  MainWindow.h  OrdersPage.h  ProductsPage.cpp  ProductsPage.h  SuppliersPage.cpp
database/: DatabaseManager.cpp  DatabaseManager.h
dialogs/: IngredientDialog.cpp
resources/: resources.qrc
ui/: CategoriesPage.h  CustomerViewPage.cpp  IconWidget.cpp  KDSPage.h  MenuPage.cpp  MenuPage.h  OrdersPage.cpp  SuppliersPage.h
